[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-nbt"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dev-dependencies]
criterion = { features = ["default", "html_reports"], workspace = true }
rand = { workspace = true }

[dependencies]
froglight-mutf8 = { features = ["alloc"], workspace = true }
uuid = { workspace = true }

# Optional dependencies
facet = { features = ["alloc", "reflect", "uuid"], workspace = true, optional = true }
froglight-facet = { workspace = true, optional = true }
froglight-facet-iter = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- Tests/Benchmarks ---

[[test]]
name = "access"

# --- Features ---

[features]
default = ["std"]

# Enable `facet` support.
facet = ["dep:facet", "dep:froglight-facet-iter", "froglight-mutf8/facet"]
# Enable `froglight-facet` support.
froglight-facet = ["dep:froglight-facet", "facet"]

# Enable `tracing` support.
tracing = ["dep:tracing", "froglight-facet?/tracing", "froglight-facet-iter?/tracing", "froglight-mutf8/tracing"]
# Enable extended `tracing` support.
tracing_ext = ["tracing"]

# Enable support for the standard library
std = ["facet?/std", "froglight-facet?/std", "froglight-facet-iter?/std", "froglight-mutf8/std", "tracing?/std", "uuid/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-facet?/nightly", "froglight-facet-iter?/nightly", "froglight-mutf8/simd"]
