[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-network"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
facet-minecraft = { workspace = true }
froglight-block = { workspace = true }
froglight-common = { workspace = true }
froglight-inventory = { workspace = true }
froglight-item = { workspace = true }
froglight-packet = { features = ["facet"], workspace = true }
froglight-registry = { workspace = true }
froglight-world = { workspace = true }

# Optional dependencies
async-net = { workspace = true, optional = true }
bevy_app = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_ecs = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_reflect = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
facet = { features = ["std"], workspace = true, optional = true }

# --- Features ---

[features]
default = ["std"]

# Enable `bevy` support.
bevy = ["dep:bevy_app", "dep:bevy_ecs", "dep:bevy_reflect", "froglight-common/bevy", "froglight-inventory/bevy", "froglight-packet/bevy", "froglight-world/bevy"]
# Enable `tracing` support.
tracing = ["dep:tracing", "froglight-block/tracing", "froglight-common/tracing", "froglight-inventory/tracing", "froglight-item/tracing", "froglight-packet/tracing", "froglight-world/tracing"]

# Enable support for the standard library
std = ["bevy_app?/std", "bevy_ecs?/std", "bevy_reflect?/std", "dep:async-net", "dep:facet", "facet-minecraft/futures-lite", "facet-minecraft/streaming", "froglight-block/std", "froglight-common/std", "froglight-inventory/std", "froglight-item/std", "froglight-packet/std", "froglight-registry/std", "froglight-world/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-block/nightly", "froglight-common/nightly", "froglight-inventory/nightly", "froglight-item/nightly", "froglight-packet/nightly", "froglight-registry/nightly", "froglight-world/nightly"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.
