[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-network"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
aes = { workspace = true }
async-channel = { features = ["std"], workspace = true }
async-lock = { features = ["std"], workspace = true }
cfb8 = { features = ["alloc"], workspace = true }
facet = { features = ["std"], workspace = true }
facet-format = { workspace = true }
facet-minecraft = { features = ["std"], workspace = true }
froglight-block = { features = ["async", "std"], workspace = true }
froglight-common = { features = ["facet", "std"], workspace = true }
# froglight-entity = { features = ["async", "std"], workspace = true }
froglight-inventory = { features = ["std"], workspace = true }
froglight-item = { features = ["async", "froglight-block", "std"], workspace = true }
froglight-packet = { features = ["facet", "std"], workspace = true }
froglight-registry = { features = ["async", "std"], workspace = true }
froglight-world = { features = ["async", "froglight-biome", "froglight-block", "std"], workspace = true }

# Optional dependencies
async-compat = { workspace = true, optional = true }
async-compression = { features = ["futures-io", "zlib"], workspace = true, optional = true }
bevy_app = { features = ["bevy_reflect", "std"], workspace = true, optional = true }
bevy_ecs = { features = ["bevy_reflect", "std"], workspace = true, optional = true }
bevy_reflect = { features = ["std"], workspace = true, optional = true }
bevy_tasks = { workspace = true, optional = true }
futures-lite = { features = ["std"], workspace = true, optional = true }
tokio = { features = ["io-util", "net"], workspace = true, optional = true }
tracing = { features = ["std"], workspace = true, optional = true }

# --- Features ---

[features]
default = ["futures-lite"]

# Enable `futures-lite` support.
futures-lite = ["bevy_tasks?/futures-lite", "dep:async-compression", "dep:futures-lite", "facet-minecraft/futures-lite"]
# Enable `tokio` support.
tokio = ["dep:async-compat", "dep:tokio", "facet-minecraft/tokio", "futures-lite"]

# Enable `bevy` support.
bevy = ["dep:bevy_app", "dep:bevy_ecs", "dep:bevy_reflect", "dep:bevy_tasks", "froglight-common/bevy", "froglight-inventory/bevy", "froglight-packet/bevy", "froglight-world/bevy", "futures-lite"]
# Enable `tracing` support.
tracing = ["dep:tracing", "facet-minecraft/tracing", "froglight-block/tracing", "froglight-common/tracing", "froglight-inventory/tracing", "froglight-item/tracing", "froglight-world/tracing"]

# Enable optimizations using the nightly toolchain
nightly = ["facet-minecraft/nightly", "froglight-block/nightly", "froglight-common/nightly", "froglight-inventory/nightly", "froglight-item/nightly", "froglight-packet/nightly", "froglight-registry/nightly", "froglight-world/nightly"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.

v26_1 = ["froglight-block/v26_1", "froglight-item/v26_1", "froglight-packet/v26_1", "froglight-registry/v26_1"]
