[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-network"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
aes = { workspace = true }
async-channel = { features = ["std"], workspace = true }
async-lock = { features = ["std"], workspace = true }
cfb8 = { features = ["alloc"], workspace = true }
cipher = { workspace = true }
facet = { features = ["std"], workspace = true }
facet-format = { workspace = true }
froglight-biome = { features = ["std"], workspace = true }
froglight-block = { features = ["std"], workspace = true }
froglight-common = { features = ["facet", "std"], workspace = true }
froglight-entity = { features = ["facet", "std"], workspace = true }
froglight-facet = { features = ["std"], workspace = true }
froglight-inventory = { features = ["std"], workspace = true }
froglight-item = { features = ["froglight-block", "std"], workspace = true }
froglight-packet = { features = ["facet", "std"], workspace = true }
froglight-player = { features = ["facet", "std"], workspace = true }
froglight-registry = { features = ["std"], workspace = true }
froglight-world = { features = ["froglight-biome", "froglight-block", "std"], workspace = true }

# Optional dependencies
async-compat = { workspace = true, optional = true }
async-compression = { features = ["futures-io", "zlib"], workspace = true, optional = true }
async-io = { workspace = true, optional = true }
bevy_app = { features = ["bevy_reflect", "std"], workspace = true, optional = true }
bevy_ecs = { features = ["bevy_reflect", "std"], workspace = true, optional = true }
bevy_reflect = { features = ["std"], workspace = true, optional = true }
bevy_tasks = { features = ["async-io"], workspace = true, optional = true }
futures-lite = { features = ["std"], workspace = true, optional = true }
tokio = { features = ["io-util", "net", "time"], workspace = true, optional = true }
tracing = { features = ["std"], workspace = true, optional = true }

# --- Features ---

[features]
default = ["futures-lite"]

# Enable `futures-lite` support.
futures-lite = ["dep:async-io", "bevy_tasks?/futures-lite", "dep:async-compression", "dep:futures-lite"]
# Enable `tokio` support.
tokio = ["dep:async-compat", "dep:tokio", "futures-lite"]

# Enable `bevy` support.
bevy = ["dep:bevy_app", "dep:bevy_ecs", "dep:bevy_reflect", "dep:bevy_tasks", "froglight-common/bevy", "froglight-entity/bevy", "froglight-inventory/bevy", "froglight-packet/bevy", "froglight-player/bevy", "froglight-world/bevy", "futures-lite"]
# Enable `tracing` support.
tracing = ["dep:tracing", "froglight-entity/tracing", "froglight-inventory/tracing", "froglight-item/tracing"]
# Enable extended `tracing` support.
tracing_ext = ["froglight-facet/tracing", "tracing"]

# Enable optimizations using the nightly toolchain
nightly = ["froglight-block/nightly", "froglight-common/nightly", "froglight-entity/nightly", "froglight-facet/nightly", "froglight-inventory/nightly", "froglight-item/nightly", "froglight-packet/nightly", "froglight-registry/nightly", "froglight-world/nightly"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.

v26_1 = ["froglight-biome/v26_1", "froglight-block/v26_1", "froglight-common/v26_1", "froglight-entity/v26_1", "froglight-item/v26_1", "froglight-packet/v26_1", "froglight-registry/v26_1"]
v26_2 = ["froglight-biome/v26_2", "froglight-block/v26_2", "froglight-common/v26_2", "froglight-entity/v26_2", "froglight-item/v26_2", "froglight-packet/v26_2", "froglight-registry/v26_2"]
