[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-packet"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
foldhash = { workspace = true }
froglight-common = { workspace = true }
indexmap = { workspace = true }
uuid = { workspace = true }

# Optional dependencies
bevy_app = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_ecs = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_reflect = { features = ["uuid"], workspace = true, optional = true }
facet = { features = ["uuid"], workspace = true, optional = true }
facet-minecraft = { workspace = true, optional = true }
serde = { features = ["derive"], workspace = true, optional = true }

# --- Features ---

[features]
default = ["std"]

# Enable `bevy` support.
bevy = ["dep:bevy_app", "dep:bevy_ecs", "dep:bevy_reflect", "froglight-common/bevy", "serde"]
# Enable `facet` support.
facet = ["dep:facet", "dep:facet-minecraft", "froglight-common/facet"]
# Enable `serde` support.
serde = ["dep:serde", "froglight-common/serde", "indexmap/serde", "uuid/serde"]

# Enable support for the standard library
std = ["facet?/std", "facet-minecraft?/std", "foldhash/std", "froglight-common/std", "indexmap/std", "uuid/std"]
# Enable optimizations using the nightly toolchain
nightly = ["facet-minecraft?/nightly", "froglight-common/nightly", "foldhash/nightly"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.

v26_1 = []
