[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-physics"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
bevy_math = { workspace = true }
bevy_transform = { workspace = true }
bitflags = { workspace = true }
froglight-block = { workspace = true }
froglight-common = { workspace = true }
froglight-entity = { workspace = true }
froglight-math = { workspace = true }
froglight-world = { features = ["froglight-biome", "froglight-block"], workspace = true }
glam = { workspace = true }

# Optional dependencies
arc-swap = { workspace = true, optional = true }
bevy_app = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_ecs = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_reflect = { workspace = true, optional = true }
libm = { workspace = true, optional = true }
quick_cache = { features = ["ahash", "parking_lot"], workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["alloc", "std"]

# Enable `bevy` support.
bevy = ["alloc", "bevy_math/bevy_reflect", "bevy_transform/bevy-support", "bevy_transform/bevy_reflect", "dep:arc-swap", "dep:bevy_app", "dep:bevy_ecs", "dep:bevy_reflect", "froglight-common/bevy", "froglight-entity/bevy", "froglight-math/bevy", "froglight-world/bevy"]

# Enable `libm` for `no_std` support.
libm = ["bevy_math/nostd-libm", "bevy_transform/libm", "dep:libm", "froglight-common/libm", "froglight-entity/libm", "froglight-math/libm", "glam/nostd-libm"]
# Enable `tracing` support.
tracing = ["dep:tracing", "froglight-block/tracing", "froglight-common/tracing", "froglight-entity/tracing"]

# Enable support for a global allocator
alloc = ["bevy_math/alloc", "bevy_transform/alloc", "froglight-common/alloc"]
# Enable support for the standard library
std = ["alloc", "bevy_app?/std", "bevy_ecs?/std", "bevy_math/std", "bevy_reflect?/std", "bevy_transform/std", "bitflags/std", "dep:quick_cache", "froglight-block/std", "froglight-common/std", "froglight-entity/std", "froglight-math/std", "froglight-world/std", "glam/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-block/nightly", "froglight-common/nightly", "froglight-entity/nightly", "froglight-math/nightly", "froglight-world/std", "std"]
