[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-physics"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
bitflags = { workspace = true }
froglight-block = { workspace = true }
froglight-common = { workspace = true }
froglight-entity = { workspace = true }
froglight-math = { workspace = true }
froglight-world = { features = ["froglight-biome", "froglight-block"], workspace = true }
glam = { workspace = true }

# Optional dependencies
bevy_app = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_ecs = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_reflect = { workspace = true, optional = true }
bevy_tasks = { workspace = true, optional = true }
bevy_transform = { features = ["alloc", "bevy-support", "bevy_reflect"], workspace = true, optional = true }
libm = { workspace = true, optional = true }
quick_cache = { features = ["custom-hasher"], workspace = true, optional = true }
serde = { features = ["derive"], workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["alloc", "std"]

# Enable `bevy` support.
bevy = ["alloc", "dep:bevy_app", "dep:bevy_ecs", "dep:bevy_tasks", "dep:bevy_reflect", "froglight-common/bevy", "froglight-entity/bevy", "froglight-math/bevy", "froglight-world/bevy", "serde"]
# Enable `serde` support.
serde = ["dep:serde", "froglight-common/serde", "glam/serde"]

# Enable `libm` for `no_std` support.
libm = ["bevy_transform?/libm", "dep:libm", "froglight-entity/libm", "froglight-math/libm", "glam/nostd-libm"]
# Enable `once_cell` for `no_std` support.
once_cell = ["froglight-block/once_cell", "froglight-math/once_cell", "froglight-world/once_cell"]
# Enable `tracing` support.
tracing = ["dep:tracing", "froglight-entity/tracing"]

# Enable support for a global allocator
alloc = ["serde?/alloc"]
# Enable support for the standard library
std = ["alloc", "bevy_app?/std", "bevy_ecs?/std", "bevy_reflect?/std", "bevy_transform?/std", "bitflags/std", "dep:quick_cache", "froglight-block/std", "froglight-common/std", "froglight-entity/std", "froglight-math/std", "froglight-world/std", "glam/std", "serde?/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-block/nightly", "froglight-common/nightly", "froglight-entity/nightly", "froglight-math/nightly", "froglight-world/std", "std"]
