[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-registry"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
foldhash = { workspace = true }
froglight-common = { workspace = true }
froglight-registry-template = { workspace = true }
indexmap = { workspace = true }

# Optional dependencies
parking_lot = { workspace = true, optional = true }

# --- Features ---

[features]
default = ["std"]

# Enable `once_cell` for `no_std` support.
once_cell = ["froglight-registry-template/once_cell"]
# Enable `parking_lot` for `no_std` support.
parking_lot = ["dep:parking_lot"]

# Enable support for the standard library
std = ["foldhash/std", "froglight-common/std", "froglight-registry-template/std", "indexmap/std"]
# Enable optimizations using the nightly toolchain
nightly = ["foldhash/nightly", "froglight-common/nightly", "froglight-registry-template/nightly", "parking_lot?/nightly"]

# -------------------------------------------------------------------------------------------------
# Note: The following features are automatically @generated.

v26_1 = ["froglight-common/v26_1"]
v26_2 = ["froglight-common/v26_2"]
