[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-snbt"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dev-dependencies]
criterion = { features = ["default", "html_reports"], workspace = true }
rand = { workspace = true }

[dependencies]
bitflags = { workspace = true }
froglight-mutf8 = { features = ["alloc"], workspace = true }
smallvec = { features = ["const_generics", "const_new", "union"], workspace = true }
uuid = { workspace = true }
lexical = { features = ["floats", "format", "integers"], workspace = true }

# Optional dependencies
facet = { features = ["alloc", "reflect", "smallvec"], workspace = true, optional = true }
froglight-nbt = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- Tests/Benchmarks ---

# --- Features ---

[features]
default = ["std"]

# Enable `facet` support.
facet = ["dep:facet", "froglight-mutf8/facet", "froglight-nbt?/facet"]
# Enable `nbt` support.
nbt = ["dep:froglight-nbt"]

# Enable `tracing` support.
tracing = ["dep:tracing", "froglight-mutf8/tracing", "froglight-nbt?/tracing"]

# Enable support for the standard library
std = ["bitflags/std", "facet?/std", "froglight-mutf8/std", "froglight-nbt?/std", "lexical/std", "tracing?/std", "uuid/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-mutf8/simd", "froglight-nbt?/nightly", "smallvec/specialization"]
