[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-text"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dev-dependencies]
criterion = { features = ["default", "html_reports"], workspace = true }
rand = { workspace = true }

[dependencies]
froglight-snbt = { workspace = true }
uuid = { workspace = true }
yansi = { features = ["alloc"], workspace = true }

# Optional dependencies
bevy_app = { workspace = true, optional = true }
bevy_ecs = { workspace = true, optional = true }
bevy_sprite = { workspace = true, optional = true }
bevy_ui = { workspace = true, optional = true }
facet = { features = ["alloc", "reflect", "uuid"], workspace = true, optional = true }
froglight-nbt = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- Tests/Benchmarks ---

# --- Features ---

[features]
default = ["std"]

# Enable `bevy` support.
bevy = ["dep:bevy_app", "dep:bevy_ecs"]
# Enable `bevy_ui` (Text) support.
bevy_ui = ["bevy", "dep:bevy_ui", "std"]
# Enable `bevy_sprite` (Text2d) support.
bevy_sprite = ["bevy", "dep:bevy_sprite", "std"]
# Enable `facet` support.
facet = ["dep:facet", "froglight-nbt?/facet", "froglight-snbt/facet"]
# Enable `nbt` support.
nbt = ["dep:froglight-nbt", "froglight-snbt/nbt"]

# Enable `tracing` support.
tracing = ["dep:tracing", "froglight-nbt?/tracing", "froglight-snbt/tracing"]

# Enable support for the standard library
std = ["bevy_app?/std", "bevy_ecs?/std", "froglight-nbt?/std", "froglight-snbt/std", "uuid/std", "yansi/hyperlink", "yansi/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-nbt?/nightly", "froglight-snbt/nightly"]
